--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   <div class="container is-max-desktop">
     <div class="Overall_Pipeline">
       <h1 class="title is-3" style="font-size: 2.1em; font-weight: bold; margin-bottom: 20px; margin-top: 30px; text-align: center;">Overall Framework</h1>
-      <img src="./static/images/pipline.png" alt="Audiodynamic Image" style="width: 100%; height: auto;">
+      <img src="./static/images/fig2_gau.png" alt="Audiodynamic Image" style="width: 100%; height: auto;">
       <h2 class="text-align: justify" style="width: 100%; text-align: justify; margin-top: 3px; margin-bottom: 20px;"> 
         Given multi-view images, MoGaFace initializes FLAME via tracking, refines expressions through a Momentum-Guided Geometry module for consistent and accurate fitting, and embeds 3D Gaussian textures using a Latent Texture Attention module that exploits multi-view texture cues.
       </h2>
