--- a/index.html
+++ b/index.html
@@ -159,12 +159,16 @@
       </video>      
       <h3 class="title is-4" style="text-align: left; margin: 0; padding: 20px 0px;">Self-Reenactment</h3>
       <video width="100%" autoplay loop muted playsinline style="margin-bottom: 20px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.2);">
+        <source src="./static/videos/074.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+      <video width="100%" autoplay loop muted playsinline style="margin-bottom: 20px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.2);">
         <source src="./static/videos/033.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
       <h3 class="title is-4" style="text-align: left; margin: 0; padding: 20px 0px;">Cross-identity Reenactment</h3>
       <video width="100%" autoplay loop muted playsinline style="margin-bottom: 20px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.2);">
-        <source src="./static/videos/cross_id_new2.mp4" type="video/mp4">
+        <source src="./static/videos/cross_id_new3.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>           
       </h2>
