--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <h2 class="title is-3" style="font-size: 2.1em; font-weight: bold; margin-bottom: 20px; text-align: center;">Camera-Aware Settings</h2>
       <!-- h3 左对齐，并且去除左右内边距 -->
       <p style="margin: 0 0 12px 0; line-height: 1.6;">
-        In the camera-aware setting, we employ 16 camera viewpoints calibrated with NeRSemble, designating the frontal viewpoint as the novel view and using the remaining views for evaluation.
+        In the camera-aware setting, we employ 16 camera viewpoints calibrated with NeRSemble, designating the frontal viewpoint as the novel view.
       </p>
       <h3 class="title is-4" style="text-align: left; margin: 0; padding: 20px 0px;">Novel View Synthesis</h3>
       <video width="100%" autoplay loop muted playsinline style="margin-bottom: 20px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.2);">
