--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         In the camera-free setting, we operate on self-recorded videos without calibrated cameras, estimating FLAME meshes from camera poses predicted in a monocular manner. The required camera parameters are obtained using a monocular method [ZBT22].
       </p>
       <video width="100%" autoplay loop muted playsinline style="margin-bottom: 20px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.2);">
-        <source src="./static/videos/self_emo.mp4" type="video/mp4">
+        <source src="./static/videos/self_emo2.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
       </h2>
